Fix trump image on small screens

--- a/css/call.css
+++ b/css/call.css
@@ -122,7 +122,7 @@ a:hover {
     background-image: url(../images/trump-surveillance-2.jpg);
     background-position: right top;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     /* background-attachment: fixed; */
     width: 100%;
     height: 100%;
